--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@
 
 //layuot files
 
+
 //settings and colors
 @import "application/settings/colors";
 @import "application/settings/variables";
@@ -51,7 +52,6 @@
 @import "application/objects/clearfix";
 
 //modules, the real css that you write everyday based on the design
-@import "application/modules/grid";
 @import "application/modules/lists";
 // @import "application/modules/logo";
 @import "application/modules/forms";
@@ -63,6 +63,15 @@
 @import "application/modules/main-footer";
 @import "application/modules/sticky-footer";
 @import "application/modules/round-icons";
+
+//modules
+@import "application/modules/header";
+@import "application/modules/hero";
+@import "application/modules/footer";
+@import "application/modules/quienes";
+@import "application/modules/ediciones";
+@import "application/modules/galeria";
+
 
 // Helpers
 @import "application/helpers/helpers";
